--- a/Level1/Unit1/Flashcards2/index.html
+++ b/Level1/Unit1/Flashcards2/index.html
@@ -12,46 +12,44 @@
             justify-content: flex-start;
             align-items: center;
             min-height: 100vh;
-            background-image: url('../../../../imagens/fundo.png'); /* Pano de fundo repetido */
-            background-repeat: repeat; /* Repetir imagem */
+            background-image: url('../../../../imagens/fundo.png');
+            background-repeat: repeat;
             margin: 0;
             padding: 20px;
         }
 
-        /* Contêiner para o título e o botão Back */
         .header-container {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
             width: 100%;
-            max-width: 1000px; /* Ajuste conforme o tamanho máximo desejado */
+            max-width: 1000px;
             margin-bottom: 20px;
         }
 
         h1 {
             font-size: 2em;
-            margin: 0; /* Remover margem extra */
+            margin: 0;
             text-align: center;
             color: #333;
-            flex-grow: 1; /* Garantir que o título ocupe o espaço restante */
+            flex-grow: 1;
         }
 
-        /* Botão Back */
         .back-button {
             padding: 10px 20px;
             background-color: #333;
             color: white;
             border: none;
             cursor: pointer;
-            margin-right: 20px; /* Espaçamento ao lado do título */
+            margin-right: 20px;
             align-self: flex-start;
         }
+
         .back-button:hover {
             background-color: #555;
         }
 
-        /* Contêiner dos flashcards */
         #flashcards-container {
             display: flex;
             flex-wrap: wrap;
@@ -121,7 +119,6 @@
             cursor: pointer;
         }
 
-        /* Estilo do modal de conclusão */
         #completion-modal {
             display: none;
             position: fixed;
@@ -160,7 +157,6 @@
             z-index: 999;
         }
 
-        /* Para telas menores */
         @media (max-width: 600px) {
             .header-container {
                 flex-direction: column;
@@ -173,20 +169,18 @@
             }
 
             .back-button {
-                margin-bottom: 10px; /* Dar um espaçamento adequado no mobile */
+                margin-bottom: 10px;
             }
         }
     </style>
 </head>
 <body>
     <div class="header-container">
-        <!-- Botão Back -->
         <button class="back-button" onclick="goBack()">Back</button>
         <h1>Hannah FlashCards</h1>
     </div>
     <div id="flashcards-container"></div>
 
-    <!-- Modal de conclusão -->
     <div id="overlay"></div>
     <div id="completion-modal">
         <h2>Phase Completed!</h2>
@@ -194,13 +188,11 @@
         <button onclick="closeModal()">Close</button>
     </div>
 
-    <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-        // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -212,14 +204,12 @@
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
 
-        // Inicializando o Firebase
         firebase.initializeApp(firebaseConfig);
 
         let totalCards = 0;
-        let interactedCards = []; // Array de controle para saber se as cartas foram viradas
+        let interactedCards = [];
         let soundPlayed = 0;
 
-        // Função para carregar palavras do arquivo words.txt
         async function loadWords() {
             try {
                 const response = await fetch('../data2/words.txt');
@@ -231,11 +221,10 @@
             }
         }
 
-        // Função para gerar os flash cards
         async function generateFlashcards() {
             const words = await loadWords();
-            totalCards = words.length; // Definir o total de cartões
-            interactedCards = new Array(totalCards).fill(false); // Inicializa o array de controle
+            totalCards = words.length;
+            interactedCards = new Array(totalCards).fill(false);
             const container = document.getElementById('flashcards-container');
 
             if (words.length === 0) {
@@ -253,7 +242,7 @@
                 const cardFront = document.createElement('div');
                 cardFront.classList.add('card-front');
                 const img = document.createElement('img');
-                img.src = `../data2/imagens/imagem${index + 1}.jpeg`;  // Carrega as imagens
+                img.src = `../data2/imagens/imagem${index + 1}.jpeg`;
                 img.onerror = function() {
                     console.error(`Erro ao carregar a imagem: imagem${index + 1}.jpeg`);
                 };
@@ -261,25 +250,20 @@
 
                 const cardBack = document.createElement('div');
                 cardBack.classList.add('card-back');
-                cardBack.textContent = word;  // Mostra a palavra correta no verso
+                cardBack.textContent = word;
 
-                // Monitora a rotação do cartão
                 card.addEventListener('click', function() {
                     card.classList.toggle('rotated');
-
-                    // Marca que a carta foi interagida
                     interactedCards[index] = true;
-
                     checkCompletion();
                 });
 
-                // Ícone de som posicionado sobre o cartão
                 const playSoundIcon = document.createElement('img');
                 playSoundIcon.classList.add('play-sound');
                 playSoundIcon.src = 'businessman.png';
                 playSoundIcon.alt = "Play Sound";
                 playSoundIcon.onclick = (event) => {
-                    event.stopPropagation(); // Evita que o cartão gire ao clicar no ícone
+                    event.stopPropagation();
                     playSound(word);
                     if (!playSoundIcon.classList.contains('played')) {
                         playSoundIcon.classList.add('played');
@@ -291,47 +275,38 @@
                 cardInner.appendChild(cardFront);
                 cardInner.appendChild(cardBack);
                 card.appendChild(cardInner);
-                card.appendChild(playSoundIcon); // Adiciona o ícone de som sobre o cartão
+                card.appendChild(playSoundIcon);
                 container.appendChild(card);
             });
         }
 
-        // Função para reproduzir o som da palavra
         function playSound(word) {
             const utterance = new SpeechSynthesisUtterance(word);
             utterance.lang = 'en-US';
             window.speechSynthesis.speak(utterance);
         }
 
-        // Função para verificar se todas as cartas foram interagidas (viradas pelo menos uma vez) e todos os ícones de som foram clicados
         function checkCompletion() {
-            const allCardsInteracted = interactedCards.every(interacted => interacted); // Verifica se todas as cartas foram viradas ao menos uma vez
-            console.log(`Interacted cards: ${interactedCards}, Sound played: ${soundPlayed}`);
-
+            const allCardsInteracted = interactedCards.every(interacted => interacted);
             if (allCardsInteracted && soundPlayed === totalCards) {
-                console.log("Fase concluída");
-                showModal(); // Exibe a mensagem de fase concluída
-                ensureUserIsAuthenticated(updateNextPhase); // Atualiza o Firebase
+                showModal();
+                ensureUserIsAuthenticated(updateNextPhase);
             }
         }
 
-        // Função para exibir o modal de conclusão
         function showModal() {
             document.getElementById('completion-modal').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
 
-        // Função para fechar o modal de conclusão
         function closeModal() {
             document.getElementById('completion-modal').style.display = 'none';
             document.getElementById('overlay').style.display = 'none';
         }
 
-        // Função para garantir que o usuário esteja autenticado
         function ensureUserIsAuthenticated(callback) {
             firebase.auth().onAuthStateChanged(function(user) {
                 if (user) {
-                    // Usuário autenticado, pode continuar
                     callback(user.uid);
                 } else {
                     console.error("Usuário não autenticado");
@@ -339,50 +314,44 @@
             });
         }
 
-        // Função para atualizar a fase no Firebase
         async function updateNextPhase(userId) {
-            const currentPhase = getPhaseFromURL(); // Pega a fase atual da URL
-            const nextPhase = parseInt(currentPhase) + 1; // Calcula a próxima fase
-
-            const { level, unit } = getLevelAndUnitFromURL(); // Pega Level e Unit da URL
+            const currentPhase = getPhaseFromURL();
+            const { level, unit } = getLevelAndUnitFromURL();
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
             
             try {
                 if (currentPhase === "last") {
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    await dbRef.child(nextUnit).set({ fase1: true });
+                } else if (currentPhase === "end") {
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    await dbRef.set({ fase1: true });
-                    console.log(`Level ${nextLevel} / Unit 1 / Fase 1 criada.`);
+                    await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
                 } else {
-                    // Libera a próxima fase
+                    const nextPhase = parseInt(currentPhase) + 1;
                     await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                    console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
                 }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
         }
 
-        // Função para obter a fase atual da URL
         function getPhaseFromURL() {
             const params = new URLSearchParams(window.location.search);
-            return params.get('fase'); // Retorna o valor do parâmetro "fase"
+            return params.get('fase');
         }
 
-        // Função para obter o Level e Unit da URL
         function getLevelAndUnitFromURL() {
-            const url = window.location.pathname; // Exemplo: "/Level1/Unit4/Flashcards/index.html"
-            const parts = url.split('/'); // Divide a URL por "/"
-            const level = parts[1]; // Obtém "Level1"
-            const unit = parts[2]; // Obtém "Unit4"
+            const url = window.location.pathname;
+            const parts = url.split('/');
+            const level = parts[1];
+            const unit = parts[2];
             return { level, unit };
         }
 
-        // Função para o botão Back
         function goBack() {
             window.history.back();
         }
 
-        // Carregar flash cards ao abrir a página
         generateFlashcards();
     </script>
 </body>
