--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -88,16 +88,16 @@
         </header>
         <main>
             <div class="activity-buttons">
-                <a href="../Atividades_Listening/listening.html" class="activity-button">
+                <a href="listening.html" class="activity-button">
                     <img src="../../imagens/listening.png" alt="Listening">
                 </a>
-                <a href="../Atividades_Writing/writing.html" class="activity-button">
+                <a href="writing.html" class="activity-button">
                     <img src="../../imagens/writing.png" alt="Writing">
                 </a>
-                <a href="../Atividades_Speaking/speaking.html" class="activity-button">
+                <a href="speaking.html" class="activity-button">
                     <img src="../../imagens/speaking.png" alt="Speaking">
                 </a>
-                <a href="../Atividades_Grammar/grammar.html" class="activity-button">
+                <a href="grammar.html" class="activity-button">
                     <img src="../../imagens/grammar.png" alt="Grammar">
                 </a>
             </div>
@@ -105,4 +105,4 @@
         </main>
     </div>
 </body>
-</html>
+</html> 
