--- a/Level1/Unit1/grammar.html
+++ b/Level1/Unit1/grammar.html
@@ -1,108 +1,51 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select an Activity</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <style>
-        .map-container {
-            width: 100%;
-            height: 100vh;
-            position: relative;
-            background-image: url('../../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: 200%;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+    <title>Hannah English Course</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Firebase Configuration and Initialization -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
 
-        header h1 {
-            text-align: center;
-            font-size: 2.5em;
-            color: #4CAF50; /* Cor verde para o título */
-            font-family: Arial, sans-serif;
-            margin-bottom: 30px;
-            text-shadow: 1px 1px 2px #000000;
-        }
-
-        .activity-buttons {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-            padding: 20px;
-            max-width: 800px;
-            width: 100%;
-        }
-
-        .activity-button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            background-color: #FFFFFF;
-            border: 2px solid #4CAF50; /* Borda verde */
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .activity-button img {
-            width: 100%;
-            height: auto;
-            max-width: 150px;
-        }
-
-        .activity-button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        .back-button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-align: center;
-            text-decoration: none;
-        }
-
-        .back-button:hover {
-            background-color: #388E3C;
-        }
-    </style>
+        // Test Firebase connection
+        firebase.database().ref('/').once('value')
+          .then((snapshot) => {
+            console.log('Database connected:', snapshot.val());
+          })
+          .catch((error) => {
+            console.error('Error connecting to database:', error);
+          });
+    </script>
 </head>
 <body>
-    <div class="map-container">
-        <header>
-            <h1>Select an Activity</h1>
-        </header>
-        <main>
-            <div class="activity-buttons">
-                <a href="../Atividades_Listening/listening.html" class="activity-button">
-                    <img src="../../imagens/listening.png" alt="Listening">
-                </a>
-                <a href="../Atividades_Writing/writing.html" class="activity-button">
-                    <img src="../../imagens/writing.png" alt="Writing">
-                </a>
-                <a href="../Atividades_Speaking/speaking.html" class="activity-button">
-                    <img src="../../imagens/speaking.png" alt="Speaking">
-                </a>
-                <a href="../Atividades_Grammar/grammar.html" class="activity-button">
-                    <img src="../../imagens/grammar.png" alt="Grammar">
-                </a>
-            </div>
-            <a href="../index.html" class="back-button">Back</a>
-        </main>
+
+    <!-- Botão Back -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
+    <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
+        <!-- SVG para as linhas -->
+        <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
     <!-- Script atualizado -->
