--- a/Level1/Unit1/grammar.html
+++ b/Level1/Unit1/grammar.html
@@ -49,6 +49,6 @@
     </div>
 
     <!-- Script atualizado -->
-    <script src="../JS/script2.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
