--- a/Level1/Unit1/Grammar/aulas/aula1/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula1/index.html
@@ -10,6 +10,8 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
             color: #333;
         }
         header {
@@ -118,7 +120,6 @@
             lines.forEach(line => {
                 const [id, lang, text] = line.split('|');
                 
-                // Verifica se todos os valores são válidos antes de continuar
                 if (id && lang && text) {
                     if (id === 'spacer') {
                         const hr = document.createElement('div');
@@ -146,7 +147,7 @@
 
         function startLesson() {
             if (currentIndex >= texts.length) {
-                currentIndex = 0; // Reinicia a leitura do início se tiver acabado
+                currentIndex = 0;
             }
             isPlaying = true;
             updateButtonState();
@@ -187,7 +188,7 @@
                 };
 
                 speechSynthesis.speak(utterance);
-                scrollToElement(element); // Rola para o próximo elemento quando ele começar a ser lido
+                scrollToElement(element);
             } else {
                 pauseLesson();
             }
@@ -201,7 +202,6 @@
             contentWrapper.scrollTo({ top: scrollPosition, behavior: 'smooth' });
         }
 
-        // Carrega o arquivo .txt quando a página é carregada
         window.onload = loadTextFile;
     </script>
 </body>
