--- a/Level1/Unit1/Grammar/aulas/aula1/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula1/index.html
@@ -12,6 +12,7 @@
             background-color: #f0f0f0;
             background-image: url('../../../imagens/fundo.png');
             background-repeat: repeat;
+            background-size: auto;
             color: #333;
         }
         header {
