--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -7,6 +7,9 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #ffffff; /* Fundo branco */
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
             margin: 0;
             padding: 0;
         }
@@ -149,6 +152,7 @@
     </div>
 
     <script>
+        // Código JavaScript permanece inalterado
         let currentQuestion = 1;
         let questionsData = [];
         let correctAnswers = [];
@@ -277,42 +281,35 @@
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Inserir o logo da escola (3x3cm) e centralizar
             const img = new Image();
             img.src = 'Logo.png'; // Certifique-se de que o logo está na mesma pasta que o HTML
             doc.addImage(img, 'PNG', 85, 10, 30, 30); // Logo centralizado (85) com 3x3 cm
 
-            // Adicionar o título logo abaixo do logo, centralizado
             doc.setFontSize(18);
             doc.text('Hannah Fill in the Blanks', 105, 50, { align: 'center' }); // Centralizado
 
-            // Adicionar o campo Name e Date abaixo, com espaço entre Name/Date e as questões
             doc.setFontSize(12);
-            doc.text('Name: ___________________________________________  Date: ___________________', 10, 70); // Linha maior para o nome e campo de data
+            doc.text('Name: ___________________________________________  Date: ___________________', 10, 70);
 
-            // Adicionar espaço entre Name/Date e as questões
-            let yPosition = 85; // Posição inicial no PDF, ajustada após Name e Date
+            let yPosition = 85;
 
             questionsData.forEach((question, index) => {
                 let text = (index + 1) + '. ' + question.text.replace(/___/g, '______________');
 
-                // Verificar se o texto é longo e quebrá-lo para caber na linha
-                const splitText = doc.splitTextToSize(text, 180); // Dividir texto que excede o tamanho da linha
+                const splitText = doc.splitTextToSize(text, 180);
 
-                // Adicionar texto no PDF
                 splitText.forEach(line => {
-                    if (yPosition > 280) { // Verifica se ultrapassa o final da página
+                    if (yPosition > 280) {
                         doc.addPage();
-                        yPosition = 20; // Nova página, reposiciona o cursor
+                        yPosition = 20;
                     }
                     doc.text(line, 10, yPosition);
-                    yPosition += 10; // Pular linha
+                    yPosition += 10;
                 });
 
-                yPosition += 10; // Adicionar espaço entre as questões
+                yPosition += 10;
             });
 
-            // Gerar e baixar o PDF
             doc.save('Hannah_Fill_in_the_Blanks.pdf');
         }
 
