--- a/Level1/Unit1/Grammar/index.html
+++ b/Level1/Unit1/Grammar/index.html
@@ -79,6 +79,37 @@
         .btn-download:hover {
             background-color: #1e7e34;
         }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+        .button-container button {
+            background-color: transparent;
+            border: none;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .button-container img {
+            max-width: 100px;
+            max-height: 100px;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+        .button-container img:hover {
+            transform: scale(1.1);
+        }
         .answer {
             font-weight: bold;
             color: #007bff;
@@ -107,6 +138,14 @@
     <a href="javascript:history.back()" class="back-button">Back</a>
     <h1 id="title">Loading title...</h1>
     
+    <div class="image-container">
+        <img id="main-image" src="image.png" alt="Example Image">
+    </div>
+
+    <div class="button-container">
+        <!-- Botões dos professores serão carregados aqui -->
+    </div>
+
     <div id="content">
         <!-- Dynamic content will be loaded here -->
     </div>
@@ -120,7 +159,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <script>
-    // Firebase configuration
+    // Configuração do Firebase
     const firebaseConfig = {
         apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
         authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -132,7 +171,7 @@
         databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
     };
 
-    // Initialize Firebase
+    // Inicializa o Firebase
     firebase.initializeApp(firebaseConfig);
 
     let totalAnswers = 0;
@@ -225,10 +264,9 @@
     }
 
     function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        const level = parts[1];
-        const unit = parts[2];
+        const url = window.location.pathname.split('/');
+        const level = url[1];
+        const unit = url[2];
         return { level, unit };
     }
 
@@ -251,10 +289,22 @@
 
                 lines.forEach(line => {
                     const textWithoutAnswer = line.replace(/\[Answer:.*?\]/g, '');
-                    doc.setFontSize(12);
-                    const textLines = doc.splitTextToSize(textWithoutAnswer, maxWidth);
-                    doc.text(textLines, margin, y);
-                    y += textLines.length * 10; 
+
+                    if (line.startsWith('Title: ')) {
+                        doc.setFontSize(16);
+                        doc.text(line.replace('Title: ', ''), margin, y);
+                        y += 20;
+                    } else {
+                        doc.setFontSize(12);
+                        const textLines = doc.splitTextToSize(textWithoutAnswer, maxWidth);
+                        doc.text(textLines, margin, y);
+                        y += textLines.length * 10; 
+                    }
+
+                    if (y > doc.internal.pageSize.height - margin) {
+                        doc.addPage();
+                        y = margin;
+                    }
                 });
 
                 doc.save("grammar_lesson_creation.pdf");
@@ -262,7 +312,36 @@
             .catch(error => console.error('Error generating the PDF:', error));
     }
 
-    document.addEventListener('DOMContentLoaded', loadTextFile);
+    function loadProfessorButtons() {
+        const buttonContainer = document.querySelector('.button-container');
+        const maxProfessors = 10;
+
+        for (let i = 1; i <= maxProfessors; i++) {
+            const imgPath = `professores/professor${i}.png`;
+            const img = new Image();
+            
+            img.onload = function() {
+                const button = document.createElement('button');
+                img.alt = `Professor ${i}`;
+                button.appendChild(img);
+                button.onclick = function() {
+                    window.location.href = `aulas/aula${i}/index.html`;
+                };
+                buttonContainer.appendChild(button);
+            };
+
+            img.onerror = function() {
+                console.log(`Imagem professor${i}.png não encontrada, pulando.`);
+            };
+
+            img.src = imgPath;
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        loadTextFile();
+        loadProfessorButtons();
+    });
 </script>
 
 </body>
