--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -121,6 +121,45 @@
             cursor: pointer;
             z-index: 1000; /* Garante que o botão fique sobre outros elementos */
         }
+        /* Estilos para o modal de conclusão */
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: none;
+            z-index: 999;
+        }
+        #completion-modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            display: none;
+            z-index: 1000;
+            text-align: center;
+        }
+        #completion-modal h2 {
+            margin: 0 0 10px;
+        }
+        #completion-modal button {
+            padding: 10px 20px;
+            background: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        #completion-modal button:hover {
+            background: #2980b9;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
@@ -151,12 +190,20 @@
         <button id="pdfBtn" onclick="generatePDF()">Generate PDF</button>
     </div>
 
+    <!-- Modal de conclusão -->
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+
     <script>
-        // Código JavaScript permanece inalterado
         let currentQuestion = 1;
         let questionsData = [];
         let correctAnswers = [];
         let totalQuestions = 0;
+        let answeredQuestions = 0; // Contador de questões respondidas corretamente
         let synth = window.speechSynthesis;
 
         // Função para buscar e carregar o arquivo .txt
@@ -249,6 +296,8 @@
             });
 
             if (allCorrect) {
+                answeredQuestions++;
+                checkCompletion();
                 document.getElementById('successContainer').style.display = 'block';
                 document.getElementById('successContainer').scrollIntoView({ behavior: 'smooth' });
                 const successSound = document.getElementById('successSound');
@@ -259,6 +308,27 @@
                     nextQuestion();
                 }, 5000);
             }
+        }
+
+        // Função para verificar a conclusão da atividade
+        function checkCompletion() {
+            if (answeredQuestions === totalQuestions) {
+                markActivityAsCompleted();
+            }
+        }
+
+        // Função para marcar a atividade como concluída
+        function markActivityAsCompleted() {
+            console.log("Atividade concluída!");
+            // Exibir o modal de conclusão
+            document.getElementById('overlay').style.display = 'block';
+            document.getElementById('completion-modal').style.display = 'block';
+        }
+
+        // Função para fechar o modal de conclusão
+        function closeModal() {
+            document.getElementById('overlay').style.display = 'none';
+            document.getElementById('completion-modal').style.display = 'none';
         }
 
         // Função para ler o texto completo da questão
