--- a/Level1/Unit1/Fill in the Blanks/index.html
+++ b/Level1/Unit1/Fill in the Blanks/index.html
@@ -166,7 +166,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
-<button id="backBtn" onclick="window.location.href='../index.html'">Back</button>
+<button id="backBtn" onclick="window.history.back()">Back</button>
 
     <h1>Hannah Fill in the Blanks</h1>
 
