--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -100,7 +100,7 @@
                 <a href="writing.html" class="activity-button">
                     <img src="../../imagens/writing.png" alt="Writing">
                 </a>
-             <div>
+             </div>
             <a href="../index.html" class="back-button">Back</a>
         </main>
     </div>
