--- a/Level1/Unit1/writing.html
+++ b/Level1/Unit1/writing.html
@@ -48,6 +48,6 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
 </body>
 </html>
