--- a/Level1/Unit2/Speak/index.html
+++ b/Level1/Unit2/Speak/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,9 @@
             text-align: center;
             margin-top: 50px;
             background-color: #f5f5f5;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
             padding: 0 20px;
         }
         h1 {
